--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,8 +13,12 @@
   "description": "",
   "dependencies": {
     "axios": "^1.10.0",
-    "dotenv": "^17.0.0",
+    "bcrypt": "^6.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "pg": "^8.16.3",
     "sequelize": "^6.37.7"
   },
